--- a/fil-rouge/backend/.env
+++ b/fil-rouge/backend/.env
@@ -1,3 +1,4 @@
 PORT = 2000
 NAME = "Merguoum Mourad"
-TOKEN_SECRET = azertyuioqsdfghjkmmlkjhnbcxwouytreza
+APP_NAME = "artShop"
+TOKEN_SECRET = AzeRtyUioQsdfGhjkNmlkJhnBcxwoUytFeza
