--- a/fil-rouge/backend/package.json
+++ b/fil-rouge/backend/package.json
@@ -10,18 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "config": "^3.3.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-jwt": "^7.7.5",
     "express-validator": "^6.14.0",
     "gravatar": "^1.8.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
-    "request": "^2.88.2",
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "nodemailer": "^6.7.3"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
