--- a/fil-rouge/backend/.env
+++ b/fil-rouge/backend/.env
@@ -1,4 +1,7 @@
+NODE_ENV = development
 PORT = 2000
 NAME = "Merguoum Mourad"
 APP_NAME = "artShop"
 TOKEN_SECRET = AzeRtyUioQsdfGhjkNmlkJhnBcxwoUytFeza
+URI_DB = "mongodb://127.0.0.1/artShop"
+PAYPAL_CLIENT_ID = your paypal client id
