--- a/fil-rouge/backend/package.json
+++ b/fil-rouge/backend/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.30.0",
     "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.4.0",
     "express-jwt": "^7.7.5",
-    "express-validator": "^6.14.0",
+    "express-validator": "^6.14.1",
     "gravatar": "^1.8.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "request": "^2.88.2"
