consommation api dashboard

--- a/fil-rouge/backend/.env
+++ b/fil-rouge/backend/.env
@@ -5,3 +5,8 @@ APP_NAME = "artShop"
 TOKEN_SECRET = AzeRtyUioQsdfGhjkNmlkJhnBcxwoUytFeza
 URI_DB = "mongodb://127.0.0.1/artShop"
 PAYPAL_CLIENT_ID = your paypal client id
+
+
+CLOUD_NAME = dnvw0lyxt
+CLOUD_API_KEY = 573335146653513
+CLOUD_API_SECRET = 5MwRwvIK4S1Uc5CLC88IurHgHyY
