--- a/fil-rouge/backend/package.json
+++ b/fil-rouge/backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1157.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cloudinary": "^1.30.0",
@@ -27,8 +28,10 @@
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "path": "^0.12.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
